--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "devDependencies": {
-    "parcel-bundler": "^1.8.1"
+  "dependencies": {
+    "bulma": "^0.7.1",
+    "superagent": "^3.8.3"
   }
 }
